added page html

--- a/Karen_Vardumyan/Homeworks/HTML_CSS/03_20.06.2018/style.css
+++ b/Karen_Vardumyan/Homeworks/HTML_CSS/03_20.06.2018/style.css
@@ -3,7 +3,7 @@
     flex-wrap: nowrap;
 }
 .header > h1 {
-    background-image: url('/home/karen/Desktop/w.jpg');
+    background-image: url('./w.jpg');
     width: 1000px;
     margin: 0px;
     text-align: center;
@@ -53,7 +53,7 @@
     width: 100%;          
 }
 .footer > div {
-    background-image: url('/home/karen/Desktop/w.jpg');
+    background-image: url('./w.jpg');
     width: 10000px;
     margin: 0px;
     text-align: center;
