--- a/Arman_Avdalyan/Homeworks/Web/HTML_CSS/3_20.06/style.css
+++ b/Arman_Avdalyan/Homeworks/Web/HTML_CSS/3_20.06/style.css
@@ -6,9 +6,13 @@ body {
 
 header {
     position: fixed;
-    height: 100%;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 10%;
+    display: block;
 }
+
 
 #btnStart {
     background-color: white;
@@ -16,19 +20,20 @@ header {
     border: none;
     outline: none;
     width: 35%;
-    height: 10%;
+    height: 100%;
     font-size: 15px;
     color: #9E96A1;
 }
 
 .btn {
+    padding: 0;
     float:left;
     outline: none;
     background-color: white;
     color: #9E96A1;
     border: none;
-    width: 10%;
-    height: 10%;
+    min-width: 10%;
+    min-height: 100%;
     font-size: 15px;
 }
 
@@ -38,17 +43,18 @@ header {
 }
 
 #btnEnd {
+    padding: 0;
     outline: none;
     background-color: white;
     border: none;
-    width: 15%;
-    height: 10%;
+    min-width: 15%;
+    min-height: 100%;
     color: white;
     float:left;
 }
 
 #text {
-    padding-top: 15%;
+    margin-top: 20%;
     color: white;
     text-align: center;
 }
@@ -68,7 +74,6 @@ header {
 
 .yellowBtn {
     color: white;
-    margin-top: 5%;
     font-size: 15px;
     font-weight: bold;
     background-color: #E66E0D;
@@ -78,16 +83,25 @@ header {
     border-color: #363D45;
     border-width: 0.5;
     text-shadow: 0px 1px #d72d05;
-    z-index: 1;
     box-shadow: 1px 1px black;
+}
+
+#btnDownload {
+    margin-top: 5%;
+}
+
+.yellowBtn:hover {
+    background-color: #FF7433;
+    cursor:pointer;
 }
 
 #divBottom {
     background-color: white;
-    height: 40%;
+    height: 50%;
     margin-top: 10%;
     padding-top: 3%;
     color: dimgray;
+    width: 100%;
 }
 
 #firstCol {
@@ -120,25 +134,21 @@ footer {
     bottom: 5;
     left: 15%;
     text-align: center;
-    padding-bottom: 15px;
     width: 70%;
-    height: 10%;
+    min-height: 5%;
     background-color: #1F2024;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 #footerText {
     font-family: Arial;
     font-size: 25px;
     margin-right: 15%;
-    position: relative;
-    bottom: 25
 }
 
 #whiteFooterText {
+    text-size: 25px;
     color: white;
 }
 
-#footerBtn {
-    position: relative;
-    bottom: 25;
-}
