--- a/Meliq_Melqonyan/Homeworks/html_css_js/3.20.06.18/style.css
+++ b/Meliq_Melqonyan/Homeworks/html_css_js/3.20.06.18/style.css
@@ -59,7 +59,7 @@ margin-top: 10px;
       position: absolute;
     left: 42%;
     padding: 10px;
-    background: yellow;
+    background: #E66E0D;
 }
 .textFooter {
     height: 200px;
@@ -79,20 +79,24 @@ h3 {
     margin: auto;
 }
 .govazd {
-	width:40%;
+	width:70%;
 	height:50px;
 	background:#000;
 color: #fff;
   padding-left: 5%;
 margin:auto;
-font-size:90%;
+font-size:130%;
+
+
 
 }
 #button {
 	padding:1%;
 	cursor:pointer;
-background:yellow;
+background:#E66E0D;
 display:inline-block;
 width:30%;
+float: right; 
+    margin-right: 10%;
 
 }
