--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.css
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.css
@@ -86,7 +86,7 @@ footer {
     background-color: black;
     padding: 40px;
     bottom: 2;
-    left: 10%;
+    right: 10%;
     width: 80%;
 }
 .article4 {
