--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.css
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.css
@@ -86,9 +86,9 @@ footer {
     background-color: black;
     padding: 40px;
     bottom: 2;
-    left: 10%;
     width: 80%;
     line-height: 50px;
+    position: right;
 }
 .article4 {
     display: inline;
