--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.css
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.css
@@ -85,10 +85,9 @@ header {
 footer {
     background-color: black;
     padding: 40px;
-    top: 2px;
     width: 80%;
-    line-height: 50px;
-    
+    line-height: 50px;    
+    float: right;
 }
 .article4 {
     display: inline;
