--- a/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.css
+++ b/Anush_Ghazaryan/Homeworks/HTML/3_20.06/web.css
@@ -86,8 +86,8 @@ footer {
     background-color: black;
     padding: 40px;
     width: 80%;
-    line-height: 50px;    
-    float: right;
+    line-height: 50px;  
+    float: center;  
 }
 .article4 {
     display: inline;
