--- a/Mher_Melqonyan/Homeworks/HTML/20.06/20.06/page.css
+++ b/Mher_Melqonyan/Homeworks/HTML/20.06/20.06/page.css
@@ -5,34 +5,52 @@ margin-right:auto;
 content: center;
 }
 .header {
-	width:80%;
-	height:560px;
-	margin:auto;
-    background-image: url("pic.jpg");
-    background-repeat: no-repeat;
+				
+background-image: url("pic.jpg");
+ width: 100%;
+    height: 650px;
+margin:auto;
+ background-repeat: no-repeat;
+background-size: cover;
+
+
 }
+   .fouB{
+width:20%;
+
+}
+.divbutt{
+    margin-top:7px;
+    display: inline-block;
+    width: 100%;
+
+}
+
 button {
+justify-content: center;
  background-color: white;
-    border: none;
+width:14.7%;
+border:none;
     color: darkgrey;
     padding: 25px 45px;
-    float:left;
-    margin-top:7px;
-   margin-right:-5px;
+text-align:center;
+   margin-left:-5px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-     font-weight: 900;
+    font-size: 14px;
+     font-weight: 700;
+}
+.firB{
+width:22%;
+  margin-left:-5px;
 }
 .nina {
  color:grey;
 }
-.firB{
- padding: 25px 100px;
-}
 button:hover {
   background-color: transparent;
+border:none;
 }
 .text{
 margin-top:190px;
@@ -48,14 +66,17 @@ font-size:45px;
 font-weight:1500;
 }
 .orange{
-position: absolute;
-top: 50%;
+display:block;
+margin-left:40%;
+width:20%;
+top: 25%;
 background-color: orange;
 color: darkgrey;
 padding: 25px 45px;
 }
 .but{
-width:80%;
+width:100%;
+display:inline-block;	
 margin-top:70px;
 text-align: center;
 }
@@ -96,19 +117,21 @@ padding-left:45px;
 display:inline-block;
 margin-top:45px;
 color:grey;
-font-size:30px;
+font-size:25px;
 font-weight:800;
 }
 .lastsp{
 color:lightgrey;
-font-size:30px;
+font-size:25px;
 font-weight:800;
 }
 .lstbtn{
 background: orange;
 margin-top:20px;
+width:15%;
 color:grey;
 margin-right:25px;
+text-align:center;
 display:inline-block;
 float:right;
 }
