--- a/Astghik_Saghyan/Homeworks/Web/JavaScript/01_27.08.18/style.css
+++ b/Astghik_Saghyan/Homeworks/Web/JavaScript/01_27.08.18/style.css
@@ -1,15 +1,21 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0px;
+.container {
+    margin: 30px 15%;
 }
 
-footer {
-    background-color: #333333;
-    padding: 30px;
-    line-height: 2;
+
+/**********Table start******/
+
+td {
+    width: 30px;
+    height: 30px;
+
 }
 
-/****Dropdown list**/
+
+/**********Table end******/
+
+
+/****Dropdown list start**/
 .dropbtn {
     background-color: #3498DB;
     color: white;
@@ -48,4 +54,12 @@ footer {
 .dropdown a:hover {background-color: #ddd;}
 
 .show {display: block;}
+
+/****Dropdown list end**/
+
+footer {
+    position: fixed;
+    bottom: 30px;
+}
+
 
