--- a/Arman_Avdalyan/Homeworks/Web/JavaScript/3_29.08/styles/styles.css
+++ b/Arman_Avdalyan/Homeworks/Web/JavaScript/3_29.08/styles/styles.css
@@ -4,17 +4,27 @@ img {
 }
 
 #container {
-    width: 30%;
+    height: 300px;
+    margin: 0;
+}
+
+div {
+    height: 33%;
+    width: 20%;
     margin: auto;
 }
 
-.choose_suite {
-    width: 20%;
-    height: 30px;
+#suit_image {
+    height: 50px;
+    width: 50px;
 }
 
-footer {
-    position: fixed;
-    left: 43%;
-    width: 10%;
+#suite_container {
+    width: 170px;
+    margin: 0;
+}
+
+.choose_suite {
+    width: 15%;
+    height: 30px;
 }
