--- a/Astghik_Saghyan/Homeworks/Web/JavaScript/02_29.08.18/style.css
+++ b/Astghik_Saghyan/Homeworks/Web/JavaScript/02_29.08.18/style.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 30px 15%;
+    margin: 30px 5%;
 }
 
 
@@ -62,20 +62,24 @@ td {
 
 #stack {
     position: fixed;
+    width: 400px;
+    top: 100px;
     right: 20px;
-    bottom: 20px;
-    left: 80%;
 }
 
 .stown {
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     float: left;
-    padding: 5px;
+    padding: 15px;
     background: #3498DB;
-    border: 1px solid blue;
-    border-radius: 10px;
+    border: 5px solid blue;
+    border-radius: 40px;
     margin: 2px;
+    font-size: 25px;
+    font-weight: 900;
+    text-align: center;
+    text-orientation: inherit;
 }
 
 footer {
