--- a/Arman_Avdalyan/Homeworks/Web/JavaScript/3_29.08/styles/styles.css
+++ b/Arman_Avdalyan/Homeworks/Web/JavaScript/3_29.08/styles/styles.css
@@ -14,9 +14,10 @@ div {
     margin: auto;
 }
 
-#suit_image {
-    height: 50px;
-    width: 50px;
+#image_card {
+    width: 60px;
+    width: 60px;
+    margin-left: 30%;
 }
 
 #suite_container {
