in progres loto

--- a/Karen_Vardumyan/Homeworks/Javascript/02_29.08.2018/style.css
+++ b/Karen_Vardumyan/Homeworks/Javascript/02_29.08.2018/style.css
@@ -13,6 +13,11 @@
     line-height: 70px;
 }
 
+
+#btnStart {
+    margin-left: 400px;
+}
+
 .button {
     width: 120px;
     height: 40px;
@@ -26,16 +31,24 @@
 }
 
 #numbers {
-    margin-top: 20px;
+    margin-top: 50px;
     margin-left: 50px;
     background-color: white;
+    position: fixed;
+    margin-bottom: 40px;
+    margin-left: 600px;
 }
 
+
+#ticket1 {
+    margin-top: 50px;
+}
 
 .ticket {
-    margin-top: 20px;
+    margin-top: 30px;
     margin-left: 20px;
 }
+
 
 .ticket td {
     width: 50px;
@@ -46,7 +59,6 @@
     background: #c97819;
     /*border:solid #6e2c0f 5px;*/
     border: none;
-
 }
 
 #numbers td {
