--- a/Astghik_Saghyan/Homeworks/Web/JavaScript/02_29.08.18/style.css
+++ b/Astghik_Saghyan/Homeworks/Web/JavaScript/02_29.08.18/style.css
@@ -14,7 +14,6 @@ td {
 
 }
 
-
 /**********Table end******/
 
 
@@ -60,26 +59,46 @@ td {
 
 /****Dropdown list end**/
 
-#stack {
+#removedStones {
     position: fixed;
     width: 400px;
-    top: 100px;
+    top: 50px;
     right: 20px;
 }
 
-.stown {
+#newStones {
+    position: fixed;
+    width: 400px;
+    right: 20px;
+    bottom: 100px;
+}
+
+#newStones .stown {
     width: 25px;
     height: 25px;
     float: left;
     padding: 15px;
-    background: #3498DB;
+    background: #9dd0f1;
     border: 5px solid blue;
     border-radius: 40px;
     margin: 2px;
     font-size: 25px;
     font-weight: 900;
     text-align: center;
-    text-orientation: inherit;
+}
+
+#removedStones .stown {
+    width: 15px;
+    height: 15px;
+    float: left;
+    padding: 8px;
+    background: #9dd0f1;
+    border: 2px solid blue;
+    border-radius: 20px;
+    margin: 2px;
+    font-size: 15px;
+    font-weight: 500;
+    text-align: center;
 }
 
 footer {
