--- a/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb/css/style.css
+++ b/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb/css/style.css
@@ -2,73 +2,17 @@
     padding: 0;
     margin: 0;
 }
-.header {
-    grid-area: header;
-    margin-bottom: 5%;
+body {
+    /* background-color: #F7BAAD; */
+    background-image: url("images/111.jpg");
 }
-.footer {
-    grid-area: footer;
-    background-color: lightsteelblue;    
-    font-size: 40px;
-}
-.main {
-    grid-area: main;
-    background-color: lightcyan; 
-}
-.left {
-    grid-area: left;
-    background-color: antiquewhite;
-    display: grid;
-    margin: 0 9% 40% 5%;
-    grid-template-areas: "defStatus defStatus defStatus defStatus"
-                         "from date date date"
-                         "to date date date"
-                         "status status circle circle"
-                         "btn btn btn btn";
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 7% 1fr 1fr 1fr 1fr;
-    grid-gap: 2px;
-}
-.defStatus {
-    grid-area: defStatus;
-    background-color: antiquewhite;
-    font-size: 20px;
-    color: gray;
-    margin: 2% 0 0 3%;
-    font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
-}
-.from {
-    grid-area: from;
-    background-color: red;
-}
-.date {
-    grid-area: date;
-    background-color: aquamarine;
-}
-.to {
-    grid-area: to;
-    background-color: slategray;
-}
-.status{
-    grid-area: status;
-    background-color: thistle;
-}
-.btn{
-    grid-area: btn;
-    background-color: goldenrod;
-}
-.right {
-    grid-area: right;
-    background-color: lightblue; 
-}
+
 .container {
     display: grid;
     grid-template-areas: "header header"
-                         "left right"
-                         "footer footer";
+                         "left right";
     grid-template-columns: 30% 1fr;
-    grid-template-rows: 20% 1fr 20%;
+    grid-template-rows: 25% 1fr;
     min-height: 100vh;    
 }
 
@@ -82,13 +26,8 @@
         grid-template-rows: 10% 1fr 1fr 10%;    
     }                    
 }
-
-body {
-   background-color: #F1856E; 
- /*    background: url("images/111.jpg") !important;*/
-    
-}
-
+ 
+/*  header  */
 ul {
     list-style-type: none;
     margin: 10px 30px 0 0;
@@ -97,11 +36,9 @@ ul {
     font-weight: bold;
     font-size: 20px;
 }
-
 li {
     float: right;
 }
-
 li a {
     display: block;
     color: white;
@@ -109,18 +46,127 @@ li a {
     padding: 16px 18px;
     text-decoration: none;
 }
-
 li a:hover {
     background-color: #F7BAAD;
     border-radius: 10px;
 }
-
 #logo {
     height: 65px;
     width: 100px;
     margin-left: 10px;
 }
-
 #Logo {
     float: left;
 }
+.header {
+    grid-area: header;
+    margin-bottom: 5%;
+}
+
+/* left */
+.left {
+    grid-area: left;
+    display: grid;
+    margin: 8% 10% 55% 10%;
+    grid-template-areas: "defStatus defStatus defStatus defStatus"
+                         "from dateFromDay dateFromMonth dateFromYear"
+                         "to dateToDay dateToMonth dateToYear"
+                         "status status circle circle"
+                         "btn btn btn btn";
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 10% 1fr 1fr 1fr 1fr;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: gray;
+    background-color: white;
+    opacity: 0.8;
+}
+.defStatus {
+    grid-area: defStatus;
+    align-self: center;
+    padding: 3% 0 3% 4%;
+    background-color: whitesmoke;
+}
+.from {
+    grid-area: from;
+    align-self: center;
+    margin-left: 15%;
+}
+.dateFromDay {
+    grid-area: dateFromDay;
+    align-self: center;
+    margin-left: 35%;
+    color: black;
+}
+.dateFromMonth {
+    grid-area: dateFromMonth;
+    align-self: center;
+    margin-left: 5%;
+    color: black;
+}
+.dateFromYear {
+    grid-area: dateFromYear;
+    align-self: center;
+    color: black;
+}
+.dateToDay {
+    grid-area: dateToDay;
+    align-self: center;
+    margin-left: 35%;
+    color: black;
+}
+.dateToMonth {
+    grid-area: dateToMonth;
+    align-self: center;
+    margin-left: 5%;
+    color: black;
+}
+.dateToYear {
+    grid-area: dateToYear;
+    align-self: center;
+    color: black;
+}
+.to {
+    grid-area: to;
+    align-self: center;
+    margin-left: 15%;
+}
+.status{
+    grid-area: status;
+    align-self: center;
+    margin-left: 7.5%;
+}
+.circle {
+    grid-area: circle;
+    align-self: center;
+    margin-left: 15%;
+}
+#button{
+    background-color: green;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    overflow: hidden;
+    border: 0;
+    width: 60%;
+    height: 35%;
+}
+.btn{
+    grid-area: btn;
+    align-self: center;
+    margin-left: 25%;
+    margin-top: 15%;
+    width: 84%;
+    height: 100%;    
+}
+
+/* right */
+.right {
+    grid-area: right;
+    background-color: red;    
+    font-size: 40px;
+    margin: 4% 10% 15% 5%;
+}
+
