--- a/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb_slide/css/style.css
+++ b/Stepan_Chaparyan/Homeworks/web/CookMasterNew/CookMasterWeb_slide/css/style.css
@@ -4,7 +4,7 @@
 }
 body {
     /* background-color: #F7BAAD; */
-    background-image: url("images/111.jpg");
+    background-image: url("images/pizza_1800x1000.jpg");
 }
 
 .container {
