--- a/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/src/Login.css
+++ b/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/src/Login.css
@@ -7,7 +7,7 @@ body {
     background-size: cover;
 }
 
-.container {
+.mycontainer {
     display: grid;
     grid-template-areas: "up up up"
                          "left main right"
@@ -40,14 +40,13 @@ body {
                          "rememberMe"
                          "button"
                          "forgotPassword";
-    /* grid-template-rows: 2fr 1fr 10% 1fr 1fr 1fr 1fr 1fr 1fr; */
     padding-bottom: 15%;
     font-family: 'Times New Roman', Times, serif;
     font-size: 18px;
     font-weight: bold;
-    color: gray;
+    color: rgb(48, 46, 46);
     background-color: white;
-    opacity: 0.8;
+    opacity: 0.9;
 }
 .logo {
     grid-area: logo;
@@ -59,66 +58,53 @@ body {
     align-self: center;
     font-size: 38px;
     margin: auto;
-    padding-top:3%;
 }
 .emailAddress {
     grid-area: emailAddress;
     align-self: center;
     margin-left: 5%;
 }
-.inputEmail {
-    grid-area: inputEmail;
-    align-self: center;
-}
-input {    
+input[type=checkbox] {    
     border-style: none;
     margin-left: 5%;
     color: gray;
     font-size: 16px;
     outline-style: none;
 }
+.inputEmail {
+    grid-area: inputEmail;
+    align-self: center;
+}
 hr {
-    margin: 0 5% 0 5%;
-    color: red;
+    margin: 0 5% 0 5% !important;
+    border: 0.5px solid black !important;
 }
 .password {
     grid-area: password;
     align-self: center;
     margin-left: 5%;
 }
-.inputPassword {
-    grid-area: inputPassword;
-    align-self: center;
-}
 .rememberMe {
     grid-area: rememberMe;
     align-self: center;
 }
-input[type='checkbox'] {
-    width: 20px;
-    height: 20px;
-}
 .button {
     grid-area: button;
-    margin-left: 5%;
-    height: 100%;  
+    height: 50%;  
 }
 .btn {
-    background-color: green;
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    border-radius: 5px;
+    font-size: 20px !important;
+    font-weight: bold !important;
+    border-radius: 10px !important;
     outline: none;
-    cursor: pointer;
-    border: 0;
-    width: 95%;
-    height: 80%;
-    margin: 3% 0 5% 0;
+    width: 90%;
+    height: 70%;
+    margin: 5% 5% 0 5%;
 }
 .forgotPassword {
     grid-area: forgotPassword;
-    margin: 5%;
-    font-size: 16px;
+    margin: 2% 5% 5% 5%;
+    font-size: 18px;
+    cursor: pointer;
 }
 
