--- a/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/src/Input.css
+++ b/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/src/Input.css
@@ -6,3 +6,17 @@ input[type=text] {
     outline-style: none;
     width: 80%;
 }
+
+.inputEmail span {
+    color: red;
+}
+
+.rememberMe hr {
+    border-style: none;
+    margin-left: 5%;
+    color: rgb(48, 46, 46);
+    font-size: 16px;
+    outline-style: none;
+    width: 0;
+    color: red;
+}
