update login page UI

--- a/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/src/Input.css
+++ b/Stepan_Chaparyan/Homeworks/web/ReactJs/cookmaster01/src/Input.css
@@ -20,3 +20,16 @@ input[type=text] {
     width: 0;
     color: red;
 }
+
+span {
+    margin-left: 5%;
+}
+input[type='checkbox'] {
+    width: 20px;
+    height: 20px;
+    margin-top: 20px;
+}
+.test {
+    color: red;
+    background-color: aqua;
+}
