--- a/Karen_Vardumyan/Homeworks/Javascript/React/my-app/src/DailyStatus.css
+++ b/Karen_Vardumyan/Homeworks/Javascript/React/my-app/src/DailyStatus.css
@@ -1,9 +1,12 @@
-#dailyStatus {
-    margin-left: 300px;
-    /*margin-top: 100px;*/
-    width: 700px;
-    height: 400px;
-}
+/*#dailyStatus {*/
+    /*margin-left: 300px;*/
+    /*!*margin-top: 100px;*!*/
+    /*width: 700px;*/
+    /*height: 400px;*/
+/*}*/
+
+
+
 .dialydiv {
     display: flex;
     background-color: white;
