update login page with validation

--- a/Stepan_Chaparyan/Homeworks/web/ReactJs/login01/src/Login.css
+++ b/Stepan_Chaparyan/Homeworks/web/ReactJs/login01/src/Login.css
@@ -4,7 +4,7 @@
                          "left main right"
                          "down down down";
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 5fr 1fr;
+    grid-template-rows: 1fr 6fr 1fr;
     min-height: 100vh;    
     background-image: url("images/login_bg_1860x1050.jpg");
     background-size: cover;
@@ -27,7 +27,7 @@
     grid-template-areas: "logo"
                          "signIn"
                          "forma";
-    grid-template-rows: 1fr 0.5fr 3fr;
+    grid-template-rows: 1fr 0.5fr 4fr;
     font-family: 'Times New Roman', Times, serif;
     font-size: 18px;
     font-weight: bold;
@@ -43,8 +43,9 @@
 .signIn {
     grid-area: signIn;
     align-self: center;
-    font-size: 38px;
+    font-size: 36px;
     margin: auto;
+    margin-bottom: 3%;
 }
 .forma {
     grid-area: forma;
@@ -53,8 +54,14 @@
     width: 92%;
     margin: 4%;
 }
+.form-group {
+    margin-bottom: 5%;
+}
 .form-group label {
-    margin-left: 5%;
+    margin: 0 0 0 20%;
+}
+.lebel {
+    margin-left: 5% !important;
 }
 .form-group input, .invalid-feedback {
     width: 90%;
@@ -62,13 +69,22 @@
 }
 .form-group button {
     width: 90%;
-    margin: 10% 5% 0 5%;
+    margin: 7% 5% 6% 5%;
+}
+.form-check {
+    padding: 0;
+    margin-top: 8%;
+}
+#check {
+    height: 20px;
+    margin: 0.5% 0 0 0;
+    width: 20%;
 }
 .forgotPassword {
     grid-area: forgotPassword;
-    margin: 5%;
+    margin-left: 5%;
     font-size: 16px;
     cursor: pointer;
-    color: gray;
+    color: rgb(44, 83, 83)
 }
 
